Prevented horizontal scrollbar

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@ html {
   @include flex-direction(column);
   @include justify-content(center);
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 img {
@@ -40,7 +40,7 @@ p > code {
   @include justify-content(center);
   @include align-items(center);
   padding: 0;
-  width: 100vw;
+  width: 100%;
 
   @media screen and (min-width: 40rem) {
     @include align-items(flex-start);
